--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,11 @@
 /* VARIABLES */
 
 :root {
-	--font-default: Calibri, sans-serif;
+	/* --font-default: Calibri, sans-serif; */
 
 	--color-green-dark: 72, 106, 82;
 	--color-green-medium: 102, 213, 153;
-	--color-green-light: 0, 0, 0;
+	--color-green-light: 0, 0, 0; /* ?? */
 	--color-green-lighter: 225, 234, 228;
 }
 
@@ -18,107 +18,62 @@
 }
 
 
-/* BODY */
+/* GLOBAL */
 
 body {
 	background: rgb(var(--color-green-lighter));
 	color: rgb(var(--color-green-dark));
-	/* font-family: var(--font-default); */
 }
 
-
-/* HEADER */
-
-header {
-  text-align: center;
-	margin-top: 15px;
-}
-
-header > hr {
+hr {
 	margin: auto;
 	width: 90%;
 	border: 0;
 	height: 1px;
-	background-image: linear-gradient(
-		to right,
+	background-image: linear-gradient(to right,
 		rgba(var(--color-green-dark), 0),
 		rgba(var(--color-green-dark), 0.75),
 		rgba(var(--color-green-dark), 0));
 }
 
-header > p {
-	font-size: 36px;
-	margin: 0;
-	padding: 10px;
+
+/* HEADER */
+
+header > .container > .row {
+	padding: 25px 0px;
 }
 
-
-/* TABLE INSIDE HEADER */
-
-table {
-	text-align: center;
+header > .container > .row > .titles {
+  text-align: center;
 }
 
-table#table1 {
-	width:80%;
-	margin-left:10%;
-	margin-right:10%;
+header > .container > .row > .titles > h2 {
+	font-size: 3rem;
 }
 
-table, td {
-	text-align: center;
-/*	border:1px solid #330000; */
+header > .container > .row > .titles > h3 {
+	font-size: 1.5rem;
+	font-weight: normal;
 }
 
-td {
-	text-align:center;
-	padding:4px;
-	/* font-family: calibri; */
-    font-size: 42px;
-    background: rgb(var(--color-green-lighter));
-    color: rgb(var(--color-green-dark));
+header > .container > .row > .contact {
+  text-align: right;
 }
 
 
 /* MAIN */
 
 main {
-	padding: 15px;
+	padding: 25px;
   text-align: center;
 }
 
-main > img {
-	margin: 50px 0px;
+main > .container > h1 {
+	margin: 25px 0px;
 }
 
-main > h1 {
-	font-size: 3rem;
-	margin-bottom: 15px;
-}
-
-main > p {
-	font-size: 1.5rem;
-}
-
-
-#image_div img {
-  			/* Set rules to fill background
-			max-height: 200px;
-            min-height: 200px;
-			min-width: 70%;  */
-			/* Set up proportionate scaling */
-			width: 70%;
-			height: auto;
-			/* Set up positioning */
-			position: static;
-			top: 5;
-			left: 0;
-}
-
-@media screen and (max-width: 1024px){
-			#image_div img {
-				left: 50%;
-				margin-left: -512px; }
+main > .container > img {
+	width: 100%;
 }
 
 
@@ -126,28 +81,20 @@ main > p {
 
 footer {
   text-align: center;
-	margin-top: 50px;
+	margin-top: 20px;
 }
 
-footer > hr {
-	margin: auto;
-	width: 60%;
-	border: 0;
-	height: 1px;
-	background-image: linear-gradient(
-		to right,
-		rgba(var(--color-green-dark), 0),
-		rgba(var(--color-green-dark), 0.75),
-		rgba(var(--color-green-dark), 0));
-}
-
-footer > p {
-	font-size: 1.1rem;
+footer > .container > p {
+	font-size: 1rem;
 	margin: 0;
 	padding: 10px;
 }
 
-footer > p > small > em {
+footer > .container > p > small {
+	font-size: 0.7rem;
+}
+
+footer > .container > p > small > em {
 	color: rgb(var(--color-green-medium));
 	font-style: normal;
 }
