--- a/public/css/main.css
+++ b/public/css/main.css
@@ -66,12 +66,18 @@ main {
   text-align: center;
 }
 
-main > .container > h1 {
-	margin: 25px 0px;
+main > .container > .row {
+	margin-bottom: 25px;
 }
 
-main > .container > img {
+main > .container img {
 	width: 100%;
+	height: 100%;
+}
+
+main > .container p {
+	font-size: 1.5rem;
+	text-align: left;
 }
 
 
@@ -92,7 +98,11 @@ footer > .container > p > small {
 	font-size: 0.7rem;
 }
 
-footer > .container > p > small > em {
+footer > .container > p > small > span.space-right {
+	margin-right: 19px;
+}
+
+footer > .container > p > small em {
 	color: rgb(var(--color-green-medium));
 	font-style: normal;
 }
